--- a/7-Bootstrap/layout/container.html
+++ b/7-Bootstrap/layout/container.html
@@ -7,12 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-2">Column 1</div>
-        <div class="col-sm-12 col-md-6 col-lg-10">Column 2</div>
-      </div>
-    </div>
+    <h1 style="display: flex; align-items: center; justify-content: center;">Container sizing</h1>
+    <div class="container-sm border">100% wide until small breakpoint</div>
+    <div class="container-md border">100% wide until medium breakpoint</div>
+    <div class="container-lg border">100% wide until large breakpoint</div>
+    <div class="container-xl border">100% wide until extra large breakpoint</div>
+    <div class="container-xxl border">100% wide until extra extra large breakpoint</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
 </html>
